rust/macros/tests/invalid/target/debug/deps/single_argument_rs-f14d64bcad1c347a.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-f14d64bcad1c347a: single-argument.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-f14d64bcad1c347a.d: single-argument.rs

single-argument.rs:
